--- a/SpectatorFootball/NewLeagueUC.xaml
+++ b/SpectatorFootball/NewLeagueUC.xaml
@@ -10,7 +10,7 @@
         <local1:TextConverter x:Key="TextConverter" />
         <local1:ImageConverter x:Key="ImageConverter" />
     </UserControl.Resources>
-    <DockPanel Height="730">
+    <DockPanel Height="800">
         <Grid DockPanel.Dock="Top">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="2*" />
@@ -29,13 +29,13 @@
         </StackPanel>
         <TabControl  Background="DarkGreen" Foreground="White">
             <TabItem Header="Settings" Margin="-2,-2,2,-1">
-                <StackPanel Orientation="Vertical" Height="540" HorizontalAlignment="Center" VerticalAlignment="top" Margin="10">
+                <StackPanel Orientation="Vertical" Height="540" Width="1200" HorizontalAlignment="Center" VerticalAlignment="top" Margin="10">
                     <GroupBox FontSize="18" FontWeight="Bold" Style="{StaticResource GroupBoxstyle}" >
                         <GroupBox.Header>
                             Basic Settings:
                         </GroupBox.Header>
 
-                        <StackPanel Width="1000" Orientation="Vertical" >
+                        <StackPanel Orientation="Vertical" >
                             <StackPanel Orientation="Horizontal" Margin="0,0,0,3">
                                 <Label Width="300" Style="{StaticResource Largelbltyle}">Short Names:</Label>
                                 <TextBox Name="newl1shortname"  Width="60"  Style="{StaticResource Largetxttyle}" MaxLength="6" />
@@ -190,7 +190,7 @@
                 </StackPanel>
             </TabItem>
             <TabItem Header="Teams">
-                <StackPanel Orientation="Vertical" HorizontalAlignment="Center">
+                <StackPanel Orientation="Vertical" HorizontalAlignment="Center" Width="1200">
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="top" >
                         <StackPanel Name="sp1" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="top" >
                         </StackPanel>
