--- a/SpectatorFootball/App.xaml
+++ b/SpectatorFootball/App.xaml
@@ -407,7 +407,7 @@
             <Setter Property="FontFamily" Value="Verdana"/>
             <Setter Property="FontSize" Value="16"/>
             <Setter Property="FontWeight" Value="Bold"/>
-            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="Foreground" Value="Black" />
             <Setter Property="Background" Value="LightGray"/>
         </Style>
     </Application.Resources>
